<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginEmailActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/m_toolbar_height">

        <ImageButton
            android:id="@+id/toolbarBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
             />

        <TextView
            android:id="@+id/toolbarTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login"
            style="@style/TextAppearance.MaterialComponents.Body1"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorGray02"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileIv"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            android:background="@color/colorGray01"
            android:src="@drawable/ic_person_white"
            app:shapeAppearanceOverlay="@style/ImageStyle_Circle"/>

        <TextView
            android:id="@+id/loginLabelTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_to_your_account"
            android:layout_below="@+id/profileIv"
            android:layout_marginTop="10dp"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/loginLabelTv"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:startIconDrawable="@drawable/ic_email_white"
            android:hint="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            
            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"

                 />
            
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTill"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailTil"
            android:hint="@string/password"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_white">

            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Textview: For RegisterEmailActivity -->
        <TextView
            android:id="@+id/noAccountTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordTill"
            android:layout_marginTop="10dp"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:text="@string/not_have_account_register"/>


        <TextView
            android:id="@+id/forgotPasswordTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordTill"
            android:layout_marginTop="10dp"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_alignParentEnd="true"
            android:text="@string/forgot_password_recover"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:minHeight="@dimen/m_button_height"
            app:cornerRadius="8dp"
            />

    </RelativeLayout>



</RelativeLayout>